docs: backpropagation cont

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -1504,7 +1504,7 @@
    "id": "192f4ab8",
    "metadata": {},
    "source": [
-    "### **Delta Rule**\n",
+    "## **Delta Rule**\n",
     "\n",
     "It is a simple update formula for adjusting the weights in a neuron. We add the product of the learning rate, the error term, and the input to the weight.\n",
     "\n",
@@ -1519,7 +1519,7 @@
     "Mathematically, it can be expressed as:\n",
     "\n",
     "$$\n",
-    "\\Delta w = \\eta \\cdot (d - y) \\cdot x\n",
+    "\\Delta w = \\eta \\cdot (\\hat{y} - y) \\cdot \\hat{y}(1 - \\hat{y})\n",
     "$$\n",
     "\n",
     "Where:\n",
@@ -1528,13 +1528,203 @@
     "\n",
     "- $ \\eta $ is the learning rate\n",
     "\n",
-    "- $ d $ is the desired output\n",
+    "- $ y $ is the desired output\n",
     "\n",
-    "- $ y $ is the actual output\n",
-    "\n",
-    "- $ x $ is the input\n",
+    "- $ \\hat{y} $ is the actual output\n",
     "\n",
     "This rule helps the model learn from its mistakes by adjusting the weights in the direction that reduces the error.\n",
+    "\n",
+    "Later,\n",
+    "\n",
+    "Once the error is calculated per neuron then we can proceed with the backpropagation to update the weights which is given as:\n",
+    "\n",
+    "$$\n",
+    "w_{ij}^{(new)} \\; = \\; w_{ij}^{(old)} \\; - \\;  \\Delta w\n",
+    "$$\n",
+    "\n",
+    "where\n",
+    "\n",
+    "- $w_{ij}^{(old)}$ is the old weight\n",
+    "\n",
+    "- $w_{ij}^{(new)}$ is the new weight\n",
+    "\n",
+    "- $\\Delta w$ is the change in weight\n",
+    "\n",
+    "And\n",
+    "\n",
+    "$$\n",
+    "\\Delta w_{ij}^{(l)} = \\frac{\\partial E}{\\partial w_{ij}^{(l)}}\n",
+    "$$\n",
+    "\n",
+    "So the final update equation is:\n",
+    "\n",
+    "$$\n",
+    "w_{ij}^{(l)} \\; \\leftarrow \\; w_{ij}^{(l)} \\; - \\; \\eta \\, \\frac{\\partial E}{\\partial w_{ij}^{(l)}}\n",
+    "$$\n",
+    "\n",
+    "<hr>\n",
+    "<hr>\n",
+    "\n",
+    "## **Derivation of Delta Term in the Backpropagation**\n",
+    "\n",
+    "Let's consider the below `architecture`,\n",
+    "\n",
+    "- Inputs: $x = (x_1, x_2)^\\top \\in \\mathbb{R}^2$\n",
+    "\n",
+    "- Hidden layer (2 neurons): pre-activations $z^{(1)} \\in \\mathbb{R}^2$, activations $a^{(1)} \\in \\mathbb{R}^2$\n",
+    "\n",
+    "- Output layer (1 neuron): pre-activation $z^{(2)} \\in \\mathbb{R}$, prediction $\\hat{y}\\in(0,1)$\n",
+    "\n",
+    "**Parameters**\n",
+    "\n",
+    "- Hidden weights $W^{(1)} \\in \\mathbb{R}^{2\\times 2}$, hidden bias $b^{(1)} \\in \\mathbb{R}^2$\n",
+    "  (row $i$ connects inputs to hidden neuron $i$)\n",
+    "\n",
+    "- Output weights $W^{(2)} \\in \\mathbb{R}^{1\\times 2}$, output bias $b^{(2)} \\in \\mathbb{R}$\n",
+    "\n",
+    "Write them explicitly:\n",
+    "\n",
+    "$$\n",
+    "W^{(1)} =\n",
+    "\\begin{bmatrix}\n",
+    "w_{11} & w_{21} \\\\\n",
+    "w_{12} & w_{22}\n",
+    "\\end{bmatrix},\\quad\n",
+    "b^{(1)} =\n",
+    "\\begin{bmatrix}\n",
+    "b_1\\\\ b_2\n",
+    "\\end{bmatrix},\\quad\n",
+    "W^{(2)} =\n",
+    "\\begin{bmatrix}\n",
+    "v_1 & v_2\n",
+    "\\end{bmatrix},\\quad\n",
+    "b^{(2)} = c.\n",
+    "$$\n",
+    "\n",
+    "**Activations**\n",
+    "\n",
+    "Use the sigmoid everywhere:\n",
+    "\n",
+    "$$\n",
+    "\\sigma(t)=\\frac{1}{1+e^{-t}},\\qquad \\sigma'(t)=\\sigma(t)\\,\\bigl(1-\\sigma(t)\\bigr).\n",
+    "$$\n",
+    "\n",
+    "**Forward pass (single example $(x,y)$)**\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "z^{(1)} &= W^{(1)}x + b^{(1)}\n",
+    "= \\begin{bmatrix}\n",
+    "w_{11}x_1 + w_{21}x_2 + b_1\\\\[2pt]\n",
+    "w_{12}x_1 + w_{22}x_2 + b_2\n",
+    "\\end{bmatrix},\\\\\n",
+    "a^{(1)} &= \\sigma\\bigl(z^{(1)}\\bigr)=\n",
+    "\\begin{bmatrix}\n",
+    "a_1\\\\ a_2\n",
+    "\\end{bmatrix}\n",
+    "=\n",
+    "\\begin{bmatrix}\n",
+    "\\sigma(z_1)\\\\ \\sigma(z_2)\n",
+    "\\end{bmatrix},\\\\\n",
+    "z^{(2)} &= W^{(2)}a^{(1)} + b^{(2)} = v_1 a_1 + v_2 a_2 + c,\\\\\n",
+    "\\hat{y} &= \\sigma\\bigl(z^{(2)}\\bigr).\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "Here,\n",
+    "\n",
+    "$ z^{(1)} $ is the pre-activation of the hidden layer, which is a linear combination of the inputs and the weights plus the bias.\n",
+    "\n",
+    "$ a^{(1)} $ is the activation of the hidden layer, obtained by applying the sigmoid function to the pre-activation.\n",
+    "\n",
+    "$ z^{(2)} $ is the pre-activation of the output layer, which is a linear combination of the hidden layer activations and the output layer weights plus the bias.\n",
+    "\n",
+    "$ \\hat{y} $ is the activation of the output layer, obtained by applying the sigmoid function to the pre-activation.\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "**Loss (per example)**\n",
+    "We’ll derive with **MSE** (nice for algebra) and note the **cross-entropy** simplification too.\n",
+    "\n",
+    "- MSE: $\\displaystyle E=\\tfrac12(\\hat{y}-d)^2$.\n",
+    "\n",
+    "- Binary Cross-Entropy (BCE): $\\displaystyle E=-\\bigl[d\\log \\hat{y} + (1-d)\\log(1-\\hat{y})\\bigr]$.\n",
+    "\n",
+    "**Backpropagation**\n",
+    "\n",
+    "Backprop is just reverse-mode chain rule on the computation graph.\n",
+    "\n",
+    "### **Output layer Delta**\n",
+    "\n",
+    "$$\n",
+    "\\delta^{(2)} \\;=\\; \\frac{\\partial E}{\\partial z^{(2)}}\n",
+    "$$\n",
+    "\n",
+    "### **Apply the chain rule**\n",
+    "\n",
+    "Because $E$ depends on $z^{(2)}$ **through** $\\hat{y}$, we chain it:\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial E}{\\partial z^{(2)}}\n",
+    "= \\frac{\\partial E}{\\partial \\hat{y}} \\cdot \\frac{\\partial \\hat{y}}{\\partial z^{(2)}}.\n",
+    "$$\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Compute each derivative**\n",
+    "\n",
+    "- First term:\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial E}{\\partial \\hat{y}}\n",
+    "= \\frac{\\partial}{\\partial \\hat{y}} \\tfrac12 (\\hat{y} - y)^2\n",
+    "= (\\hat{y} - y).\n",
+    "$$\n",
+    "\n",
+    "- Second term:\n",
+    "\n",
+    "We know the derivative of the sigmoid function:\n",
+    "\n",
+    "$$\n",
+    "\\sigma'(z) = \\sigma(z)(1 - \\sigma(z)).\n",
+    "$$\n",
+    "\n",
+    "Therefore,\n",
+    "\n",
+    "We can write:\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial \\hat{y}}{\\partial z^{(2)}}\n",
+    "= \\frac{\\partial}{\\partial z^{(2)}} \\sigma(z^{(2)})\n",
+    "= \\hat{y}(1 - \\hat{y}).\n",
+    "$$\n",
+    "\n",
+    "Because,\n",
+    "\n",
+    "$$\n",
+    "\\hat{y} = \\sigma(z^{(2)}).\n",
+    "$$\n",
+    "\n",
+    "And,\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial \\hat{y}}{\\partial z^{(2)}}\n",
+    "= \\frac{\\partial}{\\partial z^{(2)}} \\sigma(z^{(2)})\n",
+    "= \\sigma(z^{(2)})\\bigl(1 - \\sigma(z^{(2)})\\bigr)\n",
+    "$$\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Combine**\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial E}{\\partial z^{(2)}}\n",
+    "= \\frac{\\partial E}{\\partial \\hat{y}} \\cdot \\frac{\\partial \\hat{y}}{\\partial z^{(2)}}\n",
+    "= (\\hat{y} - y) \\cdot \\hat{y}(1 - \\hat{y})\n",
+    "$$\n",
+    "\n",
+    "<hr>\n",
+    "<hr>\n",
     "\n",
     "**Output Error**\n",
     "\n",
@@ -1743,6 +1933,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2ff29c46",
+   "metadata": {},
+   "source": [
+    "<hr>\n",
+    "<hr>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "24b0f93a",
    "metadata": {},
    "source": [
@@ -1752,7 +1951,227 @@
     "\n",
     "```C++\n",
     "\n",
+    "#include \"mlp.h\"\n",
+    "#include <iostream>\n",
+    "using namespace std;\n",
+    "\n",
+    "// Random Number Generator Function\n",
+    "double frand()\n",
+    "{\n",
+    "  return (2.0 * (double)rand() / RAND_MAX) - 1.0;\n",
+    "}\n",
+    "\n",
+    "/*\n",
+    "Single Layer Perceptron Implementation\n",
+    "*/\n",
+    "\n",
+    "// Return a new Perceptron Object with the Specified number of Inputs (+1 for the bias)\n",
+    "\n",
+    "Perceptron::Perceptron(size_t inputs, double bias)\n",
+    "{\n",
+    "  this->bias = bias;\n",
+    "\n",
+    "  // Initialize the Weights as Random numbers of Double between -1 and 1\n",
+    "\n",
+    "  weights.resize(inputs + 1); // Resize the Vector for Weights + Bias\n",
+    "\n",
+    "  // Generate Random Numbers and Fill in the Vectors. Pass the frand function to generate the number\n",
+    "\n",
+    "  generate(weights.begin(), weights.end(), frand);\n",
+    "}\n",
+    "\n",
+    "// Run Function\n",
+    "// Feeds an Input Vector X into the perceptron to return the activation function output.\n",
+    "double Perceptron::run(std::vector<double> x)\n",
+    "{\n",
+    "\n",
+    "  // Add the bias at the end\n",
+    "  x.push_back(bias);\n",
+    "\n",
+    "  // Weighted Sum\n",
+    "  double sum = inner_product(x.begin(), x.end(), weights.begin(), (double)0.0);\n",
+    "\n",
+    "  return sigmoid(sum); // Pass into the sigmoid function\n",
+    "}\n",
+    "\n",
+    "// Set the weights. w_init is a vector with the Weights\n",
+    "void Perceptron::set_weights(std::vector<double> w_init)\n",
+    "{\n",
+    "  weights = w_init; // Copies the vector\n",
+    "}\n",
+    "\n",
+    "// Evaluate the Sigmoid Function for the floating point of input\n",
+    "\n",
+    "double Perceptron::sigmoid(double x)\n",
+    "{\n",
+    "  return 1.0 / (1.0 + exp(-x));\n",
+    "}\n",
+    "\n",
+    "/*\n",
+    "Multi Layer Perceptron Implementation\n",
+    "*/\n",
+    "\n",
+    "// Return a new MLP Object with the Specified number layers, bias and Learning Rate\n",
+    "\n",
+    "MultiLayerPerceptron::MultiLayerPerceptron(std::vector<size_t> layers, double bias, double eta) : layers(layers), bias(bias), eta(eta)\n",
+    "{\n",
+    "  // Create Neurons Layer By Layer\n",
+    "  // Outer Loop\n",
+    "  for (size_t i = 0; i < layers.size(); i++)\n",
+    "  {\n",
+    "    // Add Vector of Values Filled with Zeros\n",
+    "    values.push_back(vector<double>(layers[i], 0.0)); // Output of Each Neuron Value set to Zero based on the number of Neurons in Each layer\n",
+    "\n",
+    "    // Initialize the error term for each neuron\n",
+    "    d.push_back(vector<double>(layers[i], 0.0));\n",
+    "\n",
+    "    // Add Vector of Neurons\n",
+    "    network.push_back(vector<Perceptron>()); // Creates a temporary empty std::vector<Perceptron> object and pushes it into 'network'. Without '()', we would only refer to the type name, not an object, causing a compiler error.\n",
+    "\n",
+    "    // Inner Loop\n",
+    "    // network[0] is the input layer, so it has no neurons\n",
+    "    if (i > 0)\n",
+    "    {\n",
+    "      // Iterate on Each Neuron in the Layer\n",
+    "      for (size_t j = 0; j < layers[i]; j++)\n",
+    "      {\n",
+    "        // Add Perceptron in Every Layer, Starting with the Layer 1, cause 0 is Input Layer\n",
+    "        // Each Perceptron Should Accept the Input as Number of Neurons in the Pervious Layer\n",
+    "        network[i].push_back(Perceptron(layers[i - 1], bias));\n",
+    "      }\n",
+    "    }\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "// Set Custom Weights\n",
+    "void MultiLayerPerceptron::set_weights(vector<vector<vector<double>>> w_init)\n",
+    "{\n",
+    "  // Write all the weights into the neural network\n",
+    "  // w_init is a vector of vectors of vectors of doubles\n",
+    "  for (size_t i = 0; i < w_init.size(); i++)\n",
+    "  {\n",
+    "    for (size_t j = 0; j < w_init[i].size(); j++)\n",
+    "    {\n",
+    "      network[i + 1][j].set_weights(w_init[i][j]);\n",
+    "    }\n",
+    "  }\n",
+    "\n",
+    "  // Example of w_init\n",
+    "  vector<vector<vector<double>>> w = {\n",
+    "      {{0, 0}, {0, 0}},\n",
+    "      {{0, 0}}};\n",
+    "}\n",
+    "\n",
+    "// Run the Network\n",
+    "vector<double> MultiLayerPerceptron::run(vector<double> x)\n",
+    "{\n",
+    "  // Run an Input Forward Through the Neural Network\n",
+    "  // x is a vector with the input values\n",
+    "\n",
+    "  // Set the values for the first layer to the given value x, before it was initialized with {0,0}\n",
+    "  values[0] = x;\n",
+    "\n",
+    "  for (size_t i = 1; i < network.size(); i++)\n",
+    "  {\n",
+    "    for (size_t j = 0; j < layers[i]; j++)\n",
+    "    {\n",
+    "      values[i][j] = network[i][j].run(values[i - 1]);\n",
+    "    }\n",
+    "  }\n",
+    "  return values.back(); // Return the output of the last layer\n",
+    "}\n",
+    "\n",
+    "// Run a single (x,y) pair with the Backpropagation algorithm\n",
+    "\n",
+    "double MultiLayerPerceptron::bp(vector<double> x, vector<double> y)\n",
+    "{\n",
+    "  // Step 1: Feed a sample to the Network\n",
+    "  vector<double> outputs = run(x); // Get the Output of Last Neuron for Each Input i.e. ŷ\n",
+    "\n",
+    "  // Step 2: Calculate MSE\n",
+    "  double MSE = 0.0;\n",
+    "  vector<double> error;\n",
+    "\n",
+    "  // Calculate the error for each output\n",
+    "  for (size_t i = 0; i < y.size(); i++)\n",
+    "  {\n",
+    "    error.push_back(y[i] - outputs[i]); // ŷ - y\n",
+    "    MSE += error[i] * error[i];         // (ŷ - y)^2 i.e. MSE for Each Sample\n",
+    "  }\n",
+    "  MSE /= layers.back(); // Average of MSE or Loss Function i.e. ((ŷ - y)^2) / N, here N is the number of Perceptron in the output layer\n",
+    "\n",
+    "  // Step 3: Calculate the Error for the Neurons in the Last Layer\n",
+    "  for (size_t i = 0; i < outputs.size(); i++)\n",
+    "  {\n",
+    "    d.back()[i] = outputs[i] * (1 - outputs[i]) * (error[i]); // Delta for the Output Layer\n",
+    "  }\n",
+    "\n",
+    "  // Step 4: Calculate the error term of each unit on each layer\n",
+    "  for (size_t i = network.size() - 2; i > 0; i--)\n",
+    "  {\n",
+    "    for (size_t h = 0; h < network[i].size(); h++)\n",
+    "    {\n",
+    "      double fwd_error = 0.0;\n",
+    "      for (size_t k = 0; k < layers[i + 1]; k++)\n",
+    "      {\n",
+    "        ; // Fill in the blank\n",
+    "      }; // Fill in the blank\n",
+    "    }\n",
+    "  }\n",
+    "\n",
+    "  // Step 5 and 6: Calculate the deltas and update the weights\n",
+    "  for (size_t i = 1; i < network.size(); i++)\n",
+    "  {\n",
+    "    for (size_t j = 0; j < layers[i]; j++)\n",
+    "    {\n",
+    "      for (size_t k = 0; k < layers[i - 1] + 1; k++)\n",
+    "      {\n",
+    "        // Fill in the blank\n",
+    "      }\n",
+    "    }\n",
+    "  }\n",
+    "\n",
+    "  // Reutrn MSE\n",
+    "\n",
+    "  return MSE;\n",
+    "}\n",
+    "\n",
+    "// Print the Weights\n",
+    "void MultiLayerPerceptron::print_weights()\n",
+    "{\n",
+    "  cout << endl;\n",
+    "\n",
+    "  for (size_t i = 1; i < network.size(); i++)\n",
+    "  {\n",
+    "    for (size_t j = 0; j < layers[i]; j++)\n",
+    "    {\n",
+    "      cout << \"Layer\" << i + 1 << \" Neuron \" << j << \": \";\n",
+    "      for (auto &it : network[i][j].weights)\n",
+    "      {\n",
+    "        cout << it << \" \";\n",
+    "      }\n",
+    "      cout << endl;\n",
+    "    }\n",
+    "  }\n",
+    "}\n",
+    "\n",
     "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d6da540",
+   "metadata": {},
+   "source": [
+    "## **Tomorrow**\n",
+    "\n",
+    "First, re watch the Problem Statement of Back Prop. We've added the `d` in the Constructor to track the error.\n",
+    "\n",
+    "Then,\n",
+    "\n",
+    "Solve the `bp`\n",
+    "\n",
+    "https://www.linkedin.com/learning/training-neural-networks-in-c-plus-plus-22661958/solution-write-your-own-backpropagation-function?resume=false&u=42288921\n"
    ]
   }
  ],
