docs: watch mathematical intution of Back Propagation and then Try Again, Track Each and Every Output

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -2165,13 +2165,11 @@
    "source": [
     "## **Tomorrow**\n",
     "\n",
-    "First, re watch the Problem Statement of Back Prop. We've added the `d` in the Constructor to track the error.\n",
+    "First, understand the Mathematical `Intuition` behind Back Propagation. Understand how the derivative of `Loss Function` w.r.t the weights is computed for each layer.\n",
     "\n",
-    "Then,\n",
+    "How $dL/dw$ is computed for each layer using the chain rule and generalized to $ \\hat{y} (1 - \\hat{y}) (\\hat{y} - y) $.\n",
     "\n",
-    "Solve the `bp`\n",
-    "\n",
-    "https://www.linkedin.com/learning/training-neural-networks-in-c-plus-plus-22661958/solution-write-your-own-backpropagation-function?resume=false&u=42288921\n"
+    "Then track the output of `MLP.bp` function to see how the gradients are propagated back through the network.\n"
    ]
   }
  ],
