docs: complete maths behind neural network

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -29,7 +29,11 @@
     "\n",
     "[Krish_Naik_Playlist](https://m.youtube.com/watch?v=JIWXbzRXk1I&t=627s)\n",
     "\n",
-    "The derivative of `Sigmoid` lies between `0` and `0.25`. Therefore, the gradient becomes very small, effectively preventing weights from changing their values, which is known as the **Vanishing Gradient Problem**.\n"
+    "The derivative of `Sigmoid` lies between `0` and `0.25`. Therefore, the gradient becomes very small, effectively preventing weights from changing their values, which is known as the **Vanishing Gradient Problem**.\n",
+    "\n",
+    "### **Complete Mathematics Neural Network**\n",
+    "\n",
+    "[Adam_Dhalla_Best](https://www.youtube.com/watch?v=Ixl3nykKG9M&t=2s)\n"
    ]
   },
   {
