docs: complete maths behind neural network

--- a/Mathematics_Behind_Neural_Network/Notes.ipynb
+++ b/Mathematics_Behind_Neural_Network/Notes.ipynb
@@ -11,6 +11,18 @@
     "\n",
     "[Adam_Dhalla_Best](https://www.youtube.com/watch?v=Ixl3nykKG9M&t=2s)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "837d59cf",
+   "metadata": {},
+   "source": [
+    "# **Complete Mathematics of Neural Network**\n",
+    "\n",
+    "\n",
+    "\n",
+    "<hr>\n"
+   ]
   }
  ],
  "metadata": {
