docs: complete maths behind neural network

--- a/Mathematics_Behind_Neural_Network/Notes.ipynb
+++ b/Mathematics_Behind_Neural_Network/Notes.ipynb
@@ -19,7 +19,9 @@
    "source": [
     "# **Complete Mathematics of Neural Network**\n",
     "\n",
+    "**course Syllabus**\n",
     "\n",
+    "<img src='./Notes_Images/syllabus.png'>\n",
     "\n",
     "<hr>\n"
    ]
