docs: complete maths behind neural network

--- a/Mathematics_Behind_Neural_Network/Notes.ipynb
+++ b/Mathematics_Behind_Neural_Network/Notes.ipynb
@@ -91,7 +91,17 @@
     "\n",
     "- $ w $ is the weight\n",
     "\n",
-    "This is just the chain rule from calculus, and it allows us to compute the gradient of the loss function with respect to the weights and biases of the model.\n"
+    "This is just the chain rule from calculus, and it allows us to compute the gradient of the loss function with respect to the weights and biases of the model.\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "Say we've a function with thousands parameters, and to figure out how to lower that loss we'll have to find out how much each `Weight` and `Bias` contributes to the loss. So that we can add or substract some value to our initial `Weights` to lower the `Loss`.\n",
+    "\n",
+    "This is done with `Backpropagation` and `Gradient Descent`.\n",
+    "\n",
+    "This means we need to find $ \\frac{\\partial L}{\\partial w_i} $ for each `Weight` $ w_i $ in the model.\n",
+    "\n",
+    "This is where automatic differentiation comes in handy. It allows us to compute these gradients efficiently without having to derive them manually.\n"
    ]
   }
  ],
