docs: complete maths behind neural network

--- a/Mathematics_Behind_Neural_Network/Notes.ipynb
+++ b/Mathematics_Behind_Neural_Network/Notes.ipynb
@@ -101,7 +101,14 @@
     "\n",
     "This means we need to find $ \\frac{\\partial L}{\\partial w_i} $ for each `Weight` $ w_i $ in the model.\n",
     "\n",
-    "This is where automatic differentiation comes in handy. It allows us to compute these gradients efficiently without having to derive them manually.\n"
+    "This is where automatic differentiation comes in handy. It allows us to compute these gradients efficiently without having to derive them manually.\n",
+    "\n",
+    "<hr>\n",
+    "<hr>\n",
+    "\n",
+    "## **Multivariable Calculus Refresher**\n",
+    "\n",
+    "### **Understand the Meaning of `Gradients`**\n"
    ]
   }
  ],
