docs: complete maths behind neural network

--- a/Mathematics_Behind_Neural_Network/Notes.ipynb
+++ b/Mathematics_Behind_Neural_Network/Notes.ipynb
@@ -5,11 +5,31 @@
    "id": "dd346528",
    "metadata": {},
    "source": [
-    "## **Resources**\n",
+    "# **Resources**\n",
+    "\n",
+    "## **Neural Networks**\n",
     "\n",
     "### **Complete Mathematics of Neural Network**\n",
     "\n",
-    "[Adam_Dhalla_Best](https://www.youtube.com/watch?v=Ixl3nykKG9M&t=2s)\n"
+    "[Adam_Dhalla_Best](https://www.youtube.com/watch?v=Ixl3nykKG9M&t=2s)\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "## **Mathematics**\n",
+    "\n",
+    "### **Multivariable Calculus**\n",
+    "\n",
+    "[IIT_Rookie](https://www.youtube.com/playlist?list=PL1XTxGlLddCzE1mHJVul22iGYE5NrSB3I)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32b64c71",
+   "metadata": {},
+   "source": [
+    "<hr>\n",
+    "<hr>\n",
+    "<hr>\n"
    ]
   },
   {
@@ -108,7 +128,25 @@
     "\n",
     "## **Multivariable Calculus Refresher**\n",
     "\n",
-    "### **Understand the Meaning of `Gradients`**\n"
+    "### **Understand the Meaning of `Gradients`**\n",
+    "\n",
+    "In `Univariate Calculus`, the derivative of a function at a point gives us the `slope of the tangent line to the function at that point`. This tells us how much the function is changing at that point.\n",
+    "\n",
+    "For example, let's understand mathematically:\n",
+    "\n",
+    "Let $f(x) = x^2$. The derivative of this function is $f'(x) = 2x$. This tells us that at any point $x$, the slope of the tangent line to the function is $2x$. If we evaluate this at $x=1$, we find that the slope is $2$. This means that the function is increasing at that point.\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "In `Multivariable Calculus`, we extend this concept to functions of multiple variables. The gradient of a function is a `vector` that contains all of its `partial derivatives`. It points in the `direction` of the `steepest ascent` of the function.\n",
+    "\n",
+    "Mathematically, if we have a function $f(x, y)$, the gradient is given by:\n",
+    "\n",
+    "$$ \\nabla f = \\left( \\frac{\\partial f}{\\partial x}, \\frac{\\partial f}{\\partial y} \\right) $$\n",
+    "\n",
+    "This vector points in the direction of the steepest increase of the function.\n",
+    "\n",
+    "<hr>\n"
    ]
   }
  ],
