docs: complete maths behind neural network

--- a/Mathematics_Behind_Neural_Network/Notes.ipynb
+++ b/Mathematics_Behind_Neural_Network/Notes.ipynb
@@ -146,6 +146,22 @@
     "\n",
     "This vector points in the direction of the steepest increase of the function.\n",
     "\n",
+    "**Image Notes**\n",
+    "\n",
+    "<img src='./Notes_Images/note1.png'>\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "<img src='./Notes_Images/note2.png'>\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "<img src='./Notes_Images/note3.png'>\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "<img src='./Notes_Images/note4.png'>\n",
+    "\n",
     "<hr>\n"
    ]
   }
