docs: complete maths behind neural network

--- a/Mathematics_Behind_Neural_Network/Notes.ipynb
+++ b/Mathematics_Behind_Neural_Network/Notes.ipynb
@@ -162,7 +162,113 @@
     "\n",
     "<img src='./Notes_Images/note4.png'>\n",
     "\n",
-    "<hr>\n"
+    "<hr>\n",
+    "\n",
+    "### **Worked Examples to Understand `Gradient` and it's Significance**\n",
+    "\n",
+    "**Example A — linear approximation and directional derivative**\n",
+    "\n",
+    "Let\n",
+    "\n",
+    "$$\n",
+    "f(x,y) = x^2 + 4y^2.\n",
+    "$$\n",
+    "\n",
+    "Compute $\\nabla f(x,y) = (2x, 8y)$. At point $(1,1)$:\n",
+    "\n",
+    "$$\n",
+    "\\nabla f(1,1) = (2,8).\n",
+    "$$\n",
+    "\n",
+    "Magnitude:\n",
+    "\n",
+    "$$\n",
+    "\\|\\nabla f\\| = \\sqrt{2^2 + 8^2} = \\sqrt{4 + 64} = \\sqrt{68}.\n",
+    "$$\n",
+    "\n",
+    "We can keep the exact $\\sqrt{68}$ or approximate: $\\sqrt{68}\\approx 8.246211\\ldots$ — so the steepest rate of increase is about $8.246$ units of $f$ per unit distance in $(x,y)$-space.\n",
+    "\n",
+    "If we move $\\Delta\\mathbf{x}=(0.01,0.005)$, linear prediction:\n",
+    "\n",
+    "$$\n",
+    "\\Delta f \\approx \\nabla f\\cdot \\Delta\\mathbf{x} = 2\\cdot 0.01 + 8\\cdot 0.005 = 0.02 + 0.04 = 0.06.\n",
+    "$$\n",
+    "\n",
+    "Actual $f(1.01,1.005)$ equals\n",
+    "\n",
+    "$$\n",
+    "(1.01)^2 + 4(1.005)^2 = 1.0201 + 4\\cdot 1.010025 = 1.0201 + 4.0401 = 5.0602,\n",
+    "$$\n",
+    "\n",
+    "initial $f(1,1)=5$. Actual change $=0.0602$, close to linear prediction $0.06$. This demonstrates the gradient gives a very good first-order prediction.\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "**Example B — gradient descent in 2D (one optimization step)**\n",
+    "\n",
+    "Minimize\n",
+    "\n",
+    "$$\n",
+    "f(x,y)=(x-3)^2 + 2(y+1)^2.\n",
+    "$$\n",
+    "\n",
+    "Gradient:\n",
+    "\n",
+    "$$\n",
+    "\\nabla f = (2(x-3),\\; 4(y+1)).\n",
+    "$$\n",
+    "\n",
+    "Start at $(0,0)$. Compute gradient at $(0,0)$:\n",
+    "\n",
+    "$$\n",
+    "\\nabla f(0,0) = (2(0-3), 4(0+1)) = (-6, 4).\n",
+    "$$\n",
+    "\n",
+    "Use learning rate $\\eta=0.1$. Gradient descent update:\n",
+    "\n",
+    "$$\n",
+    "(x_{\\text{new}},y_{\\text{new}}) = (0,0) - 0.1\\cdot(-6,4) = (0+0.6,\\; 0-0.4) = (0.6,\\,-0.4).\n",
+    "$$\n",
+    "\n",
+    "Function values:\n",
+    "\n",
+    "$$\n",
+    "f(0,0) = 9 + 2 = 11.\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "f(0.6,-0.4) = (0.6-3)^2 + 2(-0.4+1)^2 = (-2.4)^2 + 2(0.6)^2 = 5.76 + 2\\cdot0.36 = 5.76 + 0.72 = 6.48.\n",
+    "$$\n",
+    "\n",
+    "Big drop from $11$ to $6.48$ in one step — the gradient told us a good descent direction.\n",
+    "\n",
+    "Second step (quick):\n",
+    "\n",
+    "$$\n",
+    "\\nabla f(0.6,-0.4)= (2(0.6-3), 4(-0.4+1)) = (-4.8, 2.4).\n",
+    "$$\n",
+    "\n",
+    "Update:\n",
+    "\n",
+    "$$\n",
+    "(0.6,-0.4) - 0.1(-4.8,2.4) = (1.08,\\,-0.64).\n",
+    "$$\n",
+    "\n",
+    "Value $f(1.08,-0.64)=3.9456$ — decreasing further.\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4fe2090",
+   "metadata": {},
+   "source": [
+    "### **Understanding `Jacbian` Chain Rule**\n",
+    "\n",
+    "**Tomorrow**\n",
+    "\n",
+    "https://www.youtube.com/watch?v=Ixl3nykKG9M&t=2s\n"
    ]
   }
  ],
