docs: understanding jacobians

--- a/Mathematics_Behind_Neural_Network/Notes.ipynb
+++ b/Mathematics_Behind_Neural_Network/Notes.ipynb
@@ -256,7 +256,11 @@
     "\n",
     "Value $f(1.08,-0.64)=3.9456$ — decreasing further.\n",
     "\n",
-    "---\n"
+    "---\n",
+    "\n",
+    "**Summary**\n",
+    "\n",
+    "`Gradients` is the transformation of `Vector` to `Scalar` fields, providing a way to understand how functions change in multiple dimensions.\n"
    ]
   },
   {
@@ -264,11 +268,21 @@
    "id": "c4fe2090",
    "metadata": {},
    "source": [
-    "### **Understanding `Jacbian` Chain Rule**\n",
+    "## **Understanding `Jacobian` Chain Rule**\n",
     "\n",
-    "**Tomorrow**\n",
+    "### **What is `Jacobian`?**\n",
     "\n",
-    "https://www.youtube.com/watch?v=Ixl3nykKG9M&t=2s\n"
+    "The `Jacobian` is a matrix that contains all the first-order partial derivatives of a vector-valued function. If we have a function $\\mathbf{f} : \\mathbb{R}^n \\rightarrow \\mathbb{R}^m$, the Jacobian matrix is an $m \\times n$ matrix given by:\n",
+    "\n",
+    "$$\n",
+    "J(\\mathbf{x}) = \\begin{bmatrix}\n",
+    "\\frac{\\partial f_1}{\\partial x_1} & \\cdots & \\frac{\\partial f_1}{\\partial x_n} \\\\\n",
+    "\\vdots & \\ddots & \\vdots \\\\\n",
+    "\\frac{\\partial f_m}{\\partial x_1} & \\cdots & \\frac{\\partial f_m}{\\partial x_n}\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "where $f_i$ are the components of the vector-valued function $\\mathbf{f}$ and $x_j$ are the components of the input vector $\\mathbf{x}$.\n"
    ]
   }
  ],
