docs: understanding jacobians

--- a/Mathematics_Behind_Neural_Network/Notes.ipynb
+++ b/Mathematics_Behind_Neural_Network/Notes.ipynb
@@ -270,6 +270,10 @@
    "source": [
     "## **Understanding `Jacobian` Chain Rule**\n",
     "\n",
+    "[Understand_Jacobian](https://www.youtube.com/watch?v=wCZ1VEmVjVo)\n",
+    "\n",
+    "Watch the above video to have complete idea of `Matrix`, `Vectors` and `Jacobian`.\n",
+    "\n",
     "### **What is `Jacobian`?**\n",
     "\n",
     "The `Jacobian` is a matrix that contains all the first-order partial derivatives of a vector-valued function. If we have a function $\\mathbf{f} : \\mathbb{R}^n \\rightarrow \\mathbb{R}^m$, the Jacobian matrix is an $m \\times n$ matrix given by:\n",
@@ -282,7 +286,53 @@
     "\\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "where $f_i$ are the components of the vector-valued function $\\mathbf{f}$ and $x_j$ are the components of the input vector $\\mathbf{x}$.\n"
+    "where $f_i$ are the components of the vector-valued function $\\mathbf{f}$ and $x_j$ are the components of the input vector $\\mathbf{x}$.\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "`Jacobian` is another way of representing `Partial Derivatives` of a function that transforms a `vector input` into a `vector output`.\n",
+    "\n",
+    "For example, if we've a function `f: R^2 -> R^2` defined as:\n",
+    "\n",
+    "$$\n",
+    "f(x,y) = \\begin{bmatrix}\n",
+    "x^2 + y \\\\\n",
+    "2x + 3y\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "The Jacobian matrix is given by:\n",
+    "\n",
+    "$$\n",
+    "J(\\mathbf{x}) = \\begin{bmatrix}\n",
+    "\\frac{\\partial f_1}{\\partial x_1} & \\cdots & \\frac{\\partial f_1}{\\partial x_n} \\\\\n",
+    "\\vdots & \\ddots & \\vdots \\\\\n",
+    "\\frac{\\partial f_m}{\\partial x_1} & \\cdots & \\frac{\\partial f_m}{\\partial x_n}\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "where $f_i$ are the components of the vector-valued function $\\mathbf{f}$ and $x_j$ are the components of the input vector $\\mathbf{x}$.\n",
+    "\n",
+    "So, first we take the `Partial Derivative` for the first function i.e. `f_1(x,y) = x^2 + y`:\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial f_1}{\\partial x} = 2x, \\quad \\frac{\\partial f_1}{\\partial y} = 1\n",
+    "$$\n",
+    "\n",
+    "Next, for the second function i.e. `f_2(x,y) = 2x + 3y`:\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial f_2}{\\partial x} = 2, \\quad \\frac{\\partial f_2}{\\partial y} = 3\n",
+    "$$\n",
+    "\n",
+    "Putting it all together, the Jacobian matrix is:\n",
+    "\n",
+    "$$\n",
+    "J(\\mathbf{x}) = \\begin{bmatrix}\n",
+    "2x & 1 \\\\\n",
+    "2 & 3\n",
+    "\\end{bmatrix}\n",
+    "$$\n"
    ]
   }
  ],
