docs: understanding jacobians

--- a/Mathematics_Behind_Neural_Network/Notes.ipynb
+++ b/Mathematics_Behind_Neural_Network/Notes.ipynb
@@ -332,7 +332,11 @@
     "2x & 1 \\\\\n",
     "2 & 3\n",
     "\\end{bmatrix}\n",
-    "$$\n"
+    "$$\n",
+    "\n",
+    "**Summary**\n",
+    "\n",
+    "`Jacobian` is the matrix representing best `Linear Map` approximation of a function `f: R^n -> R^m` at a given point `(a,b)`.\n"
    ]
   }
  ],
