docs: understanding jacobians

--- a/Mathematics_Behind_Neural_Network/Notes.ipynb
+++ b/Mathematics_Behind_Neural_Network/Notes.ipynb
@@ -467,9 +467,15 @@
    "source": [
     "## **Understanding `Jacobian` Chain Rule**\n",
     "\n",
+    "**Khan Academy**\n",
+    "\n",
+    "[PreReq_For_Jacobian](https://www.youtube.com/watch?v=VmfTXVG9S0U)\n",
+    "\n",
     "[Understand_Jacobian](https://www.youtube.com/watch?v=wCZ1VEmVjVo)\n",
     "\n",
     "Watch the above video to have complete idea of `Matrix`, `Vectors` and `Jacobian`.\n",
+    "\n",
+    "<hr>\n",
     "\n",
     "### **What is `Jacobian`?**\n",
     "\n",
