docs: resources update

--- a/Mathematics_Behind_Neural_Network/Notes.ipynb
+++ b/Mathematics_Behind_Neural_Network/Notes.ipynb
@@ -7,9 +7,7 @@
    "source": [
     "# **Resources**\n",
     "\n",
-    "## **Neural Networks**\n",
-    "\n",
-    "### **Complete Mathematics of Neural Network**\n",
+    "## **Complete Mathematics of Neural Network**\n",
     "\n",
     "[Adam_Dhalla_Best](https://www.youtube.com/watch?v=Ixl3nykKG9M&t=2s)\n",
     "\n",
@@ -19,7 +17,35 @@
     "\n",
     "### **Multivariable Calculus**\n",
     "\n",
-    "[IIT_Rookie](https://www.youtube.com/playlist?list=PL1XTxGlLddCzE1mHJVul22iGYE5NrSB3I)\n"
+    "**IIT Mathematics**\n",
+    "\n",
+    "Explains Theory, with mathematical proof.\n",
+    "\n",
+    "[IIT_Rookie](https://www.youtube.com/playlist?list=PL1XTxGlLddCzE1mHJVul22iGYE5NrSB3I)\n",
+    "\n",
+    "**Dr. Trefor Bazett**\n",
+    "\n",
+    "Explains with Graphs\n",
+    "\n",
+    "[Dr_Trefor_Bazett](https://www.youtube.com/playlist?list=PLHXZ9OQGMqxc_CvEy7xBKRQr6I214QJcd)\n",
+    "\n",
+    "## **YT Channels That Visualize and Explains Mathematics**\n",
+    "\n",
+    "**Wumbo**\n",
+    "\n",
+    "He has connection with `3B1B`. He has started to create content related to mathematics.\n",
+    "\n",
+    "[Wumbo](https://www.youtube.com/@wumbo_dot_net/videos)\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "## **Websites Related to Maths Contribution**\n",
+    "\n",
+    "**James Schloss**\n",
+    "\n",
+    "He has connection with `3B1B`. He actively contributes to the [algorithm-archive.org](https://www.algorithm-archive.org/). The `Arcane Algorithm Archive` is a collaborative effort to create a guide for all important algorithms in all languages.\n",
+    "\n",
+    "We can contribute to this project as well, refer to [how_to_contribute](https://www.algorithm-archive.org/contents/how_to_contribute/how_to_contribute.html)\n"
    ]
   },
   {
