docs: resources update

--- a/Mathematics_Behind_Neural_Network/Notes.ipynb
+++ b/Mathematics_Behind_Neural_Network/Notes.ipynb
@@ -29,6 +29,8 @@
     "\n",
     "[Dr_Trefor_Bazett](https://www.youtube.com/playlist?list=PLHXZ9OQGMqxc_CvEy7xBKRQr6I214QJcd)\n",
     "\n",
+    "<hr>\n",
+    "\n",
     "## **YT Channels That Visualize and Explains Mathematics**\n",
     "\n",
     "**Wumbo**\n",
@@ -36,6 +38,10 @@
     "He has connection with `3B1B`. He has started to create content related to mathematics.\n",
     "\n",
     "[Wumbo](https://www.youtube.com/@wumbo_dot_net/videos)\n",
+    "\n",
+    "**3Blue1Brown**\n",
+    "\n",
+    "[Essence_Of_Calculus](https://www.youtube.com/playlist?list=PLZHQObOWTQDMsr9K-rj53DwVRMYO3t5Yr)\n",
     "\n",
     "<hr>\n",
     "\n",
@@ -45,7 +51,19 @@
     "\n",
     "He has connection with `3B1B`. He actively contributes to the [algorithm-archive.org](https://www.algorithm-archive.org/). The `Arcane Algorithm Archive` is a collaborative effort to create a guide for all important algorithms in all languages.\n",
     "\n",
-    "We can contribute to this project as well, refer to [how_to_contribute](https://www.algorithm-archive.org/contents/how_to_contribute/how_to_contribute.html)\n"
+    "We can contribute to this project as well, refer to [how_to_contribute](https://www.algorithm-archive.org/contents/how_to_contribute/how_to_contribute.html)\n",
+    "\n",
+    "**3Blue1Brown**\n",
+    "\n",
+    "[Link](https://www.3blue1brown.com/)\n",
+    "\n",
+    "**3B1B : Summer of Math Exposition**\n",
+    "\n",
+    "The Summer of Math Exposition (SoME) is an annual competition fostering the creation of excellent math content online. You can participate as either a creator or judge.\n",
+    "\n",
+    "[Link](https://some.3b1b.co/)\n",
+    "\n",
+    "I've decided to participate in this competition.\n"
    ]
   },
   {
