docs: resources update

--- a/Mathematics_Behind_Neural_Network/Notes.ipynb
+++ b/Mathematics_Behind_Neural_Network/Notes.ipynb
@@ -53,6 +53,12 @@
     "\n",
     "We can contribute to this project as well, refer to [how_to_contribute](https://www.algorithm-archive.org/contents/how_to_contribute/how_to_contribute.html)\n",
     "\n",
+    "**3B1B Manim**\n",
+    "\n",
+    "`Manim` is an engine for precise programmatic animations, designed for creating explanatory math videos.\n",
+    "\n",
+    "[Contribution_Link](https://github.com/3b1b/manim/issues)\n",
+    "\n",
     "**3Blue1Brown**\n",
     "\n",
     "[Link](https://www.3blue1brown.com/)\n",
